--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
   </div>
 
   <!-- Netlify form -->
-  <form name="jiejia-zhou-questionnaire" method="POST" data-netlify="true" action="/success.html">
+  <form name="jiejia-zhou-questionnaire" method="POST" action="/success.html"
+      data-netlify="true" netlify-honeypot="bot-field">
     <input type="hidden" name="form-name" value="jiejia-zhou-questionnaire" />
+
+    <p style="display:none;">
+      <label>Don’t fill this out: <input name="bot-field" /></label>
+    </p>
 
     <!-- Optional demographics (closed-ended, minimal) -->
     <fieldset>
